--- a/templates/etc_cron.d_ansible-pull.j2
+++ b/templates/etc_cron.d_ansible-pull.j2
@@ -1,2 +1,2 @@
 # Cron job to git clone/pull a repo and then run locally
-{{ schedule }} {{ cron_user }} ansible-pull -d {{ workdir }} -U {{ repo_url }} >>{{ logfile }} 2>&1
+{{ schedule }} {{ cron_user }} ansible-pull -d {{ workdir }} -i {{ hostname }}, -U {{ repo_url }} >>{{ logfile }} 2>&1
